# openvslam

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_dbow2.sh  build_g2o.sh  guide.txt
.devcontainer/: Dockerfile  devcontainer.json
3rd/DBoW2/src/DUtils/: Timestamp.cpp
src/openvslam/: CMakeLists.txt  system.cc
src/openvslam/data/: bow_database.cc  bow_vocabulary.h  bow_vocabulary_fwd.h  frame.cc  frame.h  keyframe.cc  keyframe.h
src/openvslam/match/: bow_tree.cc  robust.cc
src/openvslam/module/: loop_detector.cc
src/openvslam/optimize/: global_bundle_adjuster.cc  local_bundle_adjuster.cc  transform_optimizer.cc
src/openvslam/optimize/internal/se3/: shot_vertex.h
src/openvslam/optimize/internal/sim3/: shot_vertex.h  transform_vertex.h
